<!--
  ~ Copyright (c) 2018  Tina Taylor.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details. https://www.gnu.org/licenses/gpl-3.0.en.html
  -->

<resources>
    <string name="app_name">Pizza Pize Partz</string>
    <string name="text_editor_textviewE1">Add your new ingredients here.</string>
    <string name="text_main_textviewMA">Pizza for breakfast, lunch and
        dinner!</string>
    <string name="menu_insert_dummy_data">Insert dummy data</string>
    <string name="menu_editor_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_new_ingredient">Add ingredient</string>
    <string name="editor_activity_title_edit_ingredient">Edit ingredient</string>
    <string name="editor_activity_update">Update the ingredient here</string>
    <string name="mainactivity_info_1">The pizzapartz table contains \ </string>
    <string name="mainactivity_info2">\ rows of ingredients. \n\n</string>
    <string name="Anchovies">Anchovies</string>
    <string name="dummySupplier">Yummy Good Stuff</string>
    <string name="text_editor_name">Ingredient</string>
    <string name="edittext_name_hint">Ingredient</string>
    <string name="edittext_price_hint">Price in dollars</string>
    <string name="text_editor_price">Price</string>
    <string name="edittext_quantity_hint">Quantity</string>
    <string name="text_editor_supplier">Supplier</string>
    <string name="edittext_supplier_hint">Supplier</string>
    <string name="edittext_phone_hint">Numbers only</string>
    <string name="text_editor_phone">Phone</string>
    <string name="text_editor_quantity">Quantity</string>
    <string name="button_add_stuff">Add Stuff</string>
    <string name="dummyPrice">6</string>
    <string name="dummyQuantity">13</string>
    <string name="dummyPhone">123456</string>
    <string name="Toast_Editor_Activity_Error_Saving">Error saving ingredient</string>
    <string name="Toast_EditorActivity_Save_Success">Ingredient was saved</string>
    <string name="editor_update_ingredient_failed">Ingredient Update error</string>
    <string name="editor_update_ingredient_successful">Ingredient Update successful</string>
    <string name="Alert_EditText_Fields_Cannot_Be_Empty">Blank entries not allowed. All info must
        be provided.</string>
    <string name="Alert_EditText_OK">OK</string>
    <string name="unknown_breed">unknown</string>
    <string name="empty_view_subtitle_text">Click the ADD STUFF button to enter an
        ingredient, the price, quantity, supplier, and supplier\'s phone number.</string>
    <string name="empty_view_title_text">The database is empty.</string>
    <string name="unsaved_changes_dialog_msg">Unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Really delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_ingredient_failed">Delete failed</string>
    <string name="editor_delete_ingredient_success">Delete succeeded</string>
    <string name="text_list_item_sale">SALE</string>
    <string name="mainactivity_toast_quantity">Quantity can\'t be negative</string>
    <string name="button_incr">+</string>
    <string name="button_decr">-</string>
    <string name="button_call_the_supplier">Call the Supplier</string>
    <string name="button_delete_this_record">Delete this record</string>
    <string name="mainmenu_delete_all_ingredients">Delete all ingredients</string>

</resources>
